	* src/index.cpp: rename bheadle to breader, update versions of
	activate to make use breader for recreating the bitvectors
	* src/column.h, src/column.cpp: add function attachIndex for
	associating and index with a column
	* src/iapi.h, src/iapi.cpp: add fastbit_selection_osr to replace
	fastbit_selection_create, add fastbit_iapi_attach_index to
	associate an index with an array

2014-06-26 John Wu <John dot Wu at ACM dot org>
	* src/iapi.h, src/iapi.cpp: add functions to deal with indexes
	* example/ibis.cpp: increase gVerbose when using
	ibis::bundle::print to generate output to files (to keep the
	regression suite running error free)
	* src/const.h: add function type FastBitReadIntArray
	* src/index.h: add class ibis::index::bitmapReader based on
	FastBitReadIntArray, add a new version of initBitmaps that accept
	FastBitReadIntArray (and initializes a bitmapReader object)
	* src/irelic.h, src/ibin.h: add constructors that makes use of the
	new initBitmaps
	* src/column.cpp: modify loadIndex to not quit when thePart is nil
	* src/irelic.cpp, src/ibin.cpp: modify the construct to work with
	in-memory data, as opposed to requiring explicit invocation of the
	special construction function

2014-06-25 John Wu <John dot Wu at ACM dot org>
	* src/index.h: add function serialSizes to capture the sizes of
	the three arrays to be generated by the function write.  This is
	necessary for the IAPI to give users a chance to allocate the
	correct sizes for the output buffers

2014-06-19 John Wu <John dot Wu at ACM dot org>
	* src/bundles.cpp: limit the number of rows printed from
	bundles::print - in an attempt to understand the out-of-memory
	fault reported by Alan Kemp <alan at irisns.com>
	* src/bord.cpp: limit the number of rows printed from bord::merge
	* src/bordm.cpp: add in-line documentation to bord::limit and
	bord::column::limit, change column::limit to invoke nosharing only
	if the content has been modified

2014-06-17 John Wu <John dot Wu at ACM dot org>