@@ -6,6 +6,11 @@
 	* src/iapi.h, src/iapi.cpp: add fastbit_selection_osr to replace
 	fastbit_selection_create, add fastbit_iapi_attach_index to
 	associate an index with an array
+	* src/ibin.cpp:6016 check for nobs==1 to prevent array out of
+	bounds problems
+	* src/iapi.cpp: revise implementation of
+	fastbit_iapi_deconstruct_index to explicit copy the values from
+	array_t objects to the output buffers
 
 2014-06-26 John Wu <John dot Wu at ACM dot org>
 	* src/iapi.h, src/iapi.cpp: add functions to deal with indexes
